--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
       
     <script src="%PUBLIC_URL%/js/modernizr.js"></script>
-    <title>Sample resume</title>
+    <title>Zakkrey's Resume</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
